# sdfr_ws

./: .gitignore  README.md
src/brightness_msgs/: CMakeLists.txt  README.md  package.xml
src/brightness_msgs/msg/: Brightness.msg
src/image_functions_sdfr/: README.md
src/relbot_control/: CMakeLists.txt  README.md  package.xml
src/relbot_control/include/relbot_control/: differential_controller.hpp  velocity_controller.hpp
src/relbot_control/src/: differential_controller.cpp  drawbox.cpp  velocity_controller.cpp
src/relbot_launch/: CMakeLists.txt  README.md  package.xml
src/relbot_launch/launch/: relbot_control.launch.py  relbot_simulation_test.launch.py  velocity_response_test.launch.py
src/relbot_simulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/relbot_simulator/include/relbot_simulator/: dynamics_simulation.hpp  relbot_simulator.hpp
src/relbot_simulator/launch/: relbot_simulator.launch.py
src/relbot_simulator/src/: dynamics_simulation.cpp  relbot_simulator.cpp
src/relbot_vision/: CMakeLists.txt  README.md  package.xml
src/relbot_vision/include/relbot_vision/: ball_detector.hpp
src/relbot_vision/msg/: BallDetection.msg  BoundingBox.msg
src/relbot_vision/src/: ball_detector.cpp  method_nocv.cpp  utils.cpp
src/relbot_vision/src/ball_detector_functions/: method_blob.cpp  method_houghCircles.cpp  method_nocv.cpp  utils.cpp
src/ros2_introduction/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/ros2_introduction/include/ros2_introduction/: brightness_detection.hpp  brightness_detection_better.hpp
src/ros2_introduction/src/: brightness_detection.cpp  brightness_detection_better.cpp
