<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brightness_msgs</name>
  <version>0.0.0</version>
  <description>This package provides a message type that contains information about the brightness of an image and human-readable description of the brightness</description>
  <maintainer email="t.w.j.fransen@student.utwente.nl">twjfr</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
