<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>relbot_control</name>
  <version>1.0.0</version>
  <description>This package serves as a control toolbox for relbot. It contains anything control related needed to solve assignment 6 of the Software Development for Robotics course.</description>
  <maintainer email="t.w.j.fransen@student.utwente.nl">Tom Fransen</maintainer>
  <maintainer email="l.a.golbach-1@student.utwente.nl">Lute Golbach</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>relbot_vision</depend>
  <depend>image_functions_sdfr</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
