<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>relbot_vision</name>
  <version>1.0.0</version>
  <description>This package serves as a vision toolbox for relbot. It contains anything vision related needed to solve assignment 6 of the Software Development for Robotics course.</description>
  <maintainer email="t.w.j.fransen@student.utwente.nl">Tom Fransen</maintainer>
  <maintainer email="l.a.golbach-1@student.utwente.nl">Lute Golbach</maintainer>
  <license>BSD</license>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_functions_sdfr</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
