<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_introduction</name>
    <version>1.0.0</version>
    <description>This is the ROS 2 introduction package for SDFR. This package was modified by group: 09.</description>
    <maintainer email="t.w.j.fransen@student.utwente.nl">Tom Fransen</maintainer>
    <maintainer email="l.a.golbach-1@student.utwente.nl">Lute Golbach</maintainer>
    <license>BSD</license>
    <author email="j.h.j.pott@student.utwente.nl">Jurrijn Pott</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>image_functions_sdfr</depend>
    <depend>brightness_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
